--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "element-ui": "^2.8.2",
     "jscs": "^3.0.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
